CNCS Dev 12/src/objects/Appendix_II__c.object
<CustomObject>
    <fields>
        <fullName>Applica_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Instructions__c</fullName>
        <label>Application Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notice_ID__c</fullName>
        <label>Notice</label>
        <referenceTo>Notice__c</referenceTo>
        <relationshipLabel>Appendix II</relationshipLabel>
        <relationshipName>Appendix_II</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Subheading_Public_Burd_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subheading-Public Burden Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subheading_Public_Burden_Statement__c</fullName>
        <defaultValue>&quot;The Paperwork Reduction Act of 1995 requires CNCS to inform all potential persons who are to respond to this collection of information that such persons are not required to respond unless it displays a currently valid OMB control number. [See 5 CFR 1320.5]. This collection is approved under OMB Control #: [XXXX-XXXX], [Name of the Data Collection Instrument], Expiration Date: [MM DD, YYYY].&quot;</defaultValue>
        <label>Subheading-Public Burden Statement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Appendix II</label>
    <nameField>
        <displayFormat>AII-{0000}</displayFormat>
        <label>Appendix II ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appendix II</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>